--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ flask-sqlalchemy==2.5.1
 Flask-Migrate==3.1.0
 Flask-Bootstrap==3.3.7.1
 Flask-SimpleMDE==0.3.0
+Flask-WTF==1.0.1
+Flask-Login==0.6.2
 requests
+WTForms==3.0.1
