--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,10 +5,10 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, macos-latest, windows-latest]
     strategy:
       matrix:
-        python-version: "3.9"
+        python-version: ["3.9"]
 
     steps:
       - uses: actions/checkout@v3
